Create user list view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<home-component props-json='{"name":"John"}'/>
+<home-component employee_list=<%= @employee_list %> pagination=<%= @pagination %> />
