Create ShowUser screen

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,1 @@
-<home-component employee_list=<%= @employee_list %> pagination=<%= @pagination %> />
+<home-component employee_list=<%= @employee_list %> />
